Final mobile overflow fix

--- a/style.css
+++ b/style.css
@@ -258,3 +258,8 @@ footer {
 
 }
 
+* {
+  box-sizing: border-box;
+}
+
+
